--- a/flexbox.html
+++ b/flexbox.html
@@ -39,11 +39,12 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        padding: 0 2rem;
       }
 
       header > span#brand {
         /* width: 40%; */
-        flex: auto;
+        flex: 1;
       }
 
       header > nav {
@@ -51,19 +52,21 @@
         flex: auto;
       }
 
-      header > span#account {
-        /* width: 10%; */
-        display: flex;
-        flex: auto;
-        justify-content: flex-end;
-        margin-right: 8%;
-      }
-
       nav > ul {
         list-style-type: none;
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
+        justify-content: center;
+        column-gap: 2rem;
+        flex: auto;
+      }
+
+      header > span#account {
+        /* width: 10%; */
+        display: flex;
+        flex: 1;
+        justify-content: flex-end;
+        margin-right: 4%;
       }
 
       nav > ul > li > a {
