--- a/flexbox.html
+++ b/flexbox.html
@@ -30,12 +30,16 @@
         width: 5em;
       }
 
+      header {
+        padding: 0 2rem;
+        background-color: #eeeeee;
+      }
+
       nav {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        padding: 0 2rem;
       }
 
       nav > #brand {
@@ -58,10 +62,6 @@
         justify-content: flex-end;
         /* margin-right: 4%; */
       }
-
- 
-
-
     </style>
   </head>
 
