--- a/flexbox.html
+++ b/flexbox.html
@@ -5,20 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flexbox Example</title>
-    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <style>
       html,
       body {
         width: 100%;
-        height: 100%;
+        /* height: 100%; */
       }
 
       .container {
         width: 100%;
-        height: 100%;
         display: flex;
         flex-direction: row;
-
         flex-wrap: wrap;
       }
 
@@ -31,14 +29,13 @@
       }
 
       header {
-        padding: 0 2rem;
+        padding: 0 2em;
         background-color: #eeeeee;
       }
 
       nav {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
         align-items: center;
       }
 
@@ -56,11 +53,9 @@
       }
 
       nav > #account {
-        /* width: 10%; */
         display: flex;
         flex: 1;
         justify-content: flex-end;
-        /* margin-right: 4%; */
       }
     </style>
   </head>
