--- a/home.html
+++ b/home.html
@@ -15,17 +15,28 @@
           sans-serif;
         margin: 0;
         display: grid;
-        grid-template-rows: minmax(10%, 10%);
+        grid-template-rows: minmax(10%, 20%);
         background-color: #fafafa;
       }
       header {
         display: flex;
-        margin: 2em 4em;
+        padding: 2em 4em;
         background-color: white;
       }
 
       main {
-        margin: 6em 4em;
+        padding: 6em 4em;
+        background: #f7f8f8; /* fallback for old browsers */
+        background: -webkit-linear-gradient(
+          to right,
+          #acbb78,
+          #f7f8f8
+        ); /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(
+          to right,
+          #acbb78,
+          #f7f8f8
+        ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
       }
 
       nav {
@@ -113,21 +124,6 @@
       footer {
         background-color: #e5e5e5;
         padding: 1rem 4rem;
-      }
-
-      body {
-        /* background: linear-gradient(90deg, white 0%, hsl(27, 96%, 61%) 80%); */
-        background: #f7f8f8; /* fallback for old browsers */
-        background: -webkit-linear-gradient(
-          to right,
-          #acbb78,
-          #f7f8f8
-        ); /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(
-          to right,
-          #acbb78,
-          #f7f8f8
-        ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
       }
     </style>
   </head>
