--- a/home.html
+++ b/home.html
@@ -24,7 +24,11 @@
         background-color: white;
       }
 
-      main {
+      main section.hero {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-areas: "one two three four";
+        gap: 3%;
         padding: 6em 4em;
         background: #f7f8f8; /* fallback for old browsers */
         background: -webkit-linear-gradient(
@@ -37,6 +41,14 @@
           #acbb78,
           #f7f8f8
         ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      }
+
+      section.hero h1 {
+        grid-area: two;
+      }
+
+      section.hero p {
+        grid-area: three;
       }
 
       nav {
@@ -67,8 +79,6 @@
 
       #logo {
         flex: 1;
-        /* background-color: #e5e5e5; */
-        /* padding: 0.25rem 2rem; */
         max-width: 8rem;
         max-height: 3.5rem;
       }
@@ -90,19 +100,6 @@
         display: flex;
         justify-content: flex-end;
       }
-
-      /* .main-background {
-        position: relative;
-
-        background-image: linear-gradient(
-          to top right,
-          var(--tw-gradient-stops)
-        );
-        opacity: 0.3;
-        left: calc(50%-11rem);
-        aspect-ratio: 1155/678;
-        width: 36.125rem;
-      } */
 
       p {
         width: 60ch;
@@ -150,37 +147,17 @@
         <!-- <a href="#account">Account</a> -->
       </span>
     </header>
-    <!-- <div
-      class="main-background"
-      style="
-        clip-path: polygon(
-          74.1% 44.1%,
-          100% 61.6%,
-          97.5% 26.9%,
-          85.5% 0.1%,
-          80.7% 2%,
-          72.5% 32.5%,
-          60.2% 62.4%,
-          52.4% 68.1%,
-          47.5% 58.3%,
-          45.2% 34.5%,
-          27.5% 76.7%,
-          0.1% 64.9%,
-          17.9% 100%,
-          27.6% 76.8%,
-          76.1% 97.7%,
-          74.1% 44.1%
-        );
-      "
-    ></div> -->
+
     <main>
-      <h1>Home is where the heart is</h1>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum voluptatem
-        molestiae exercitationem consectetur, accusamus similique hic architecto
-        minima dolorem ad possimus velit, officia qui fuga at delectus voluptas
-        laudantium sit.
-      </p>
+      <section class="hero">
+        <h1>Home is where the heart is</h1>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum
+          voluptatem molestiae exercitationem consectetur, accusamus similique
+          hic architecto minima dolorem ad possimus velit, officia qui fuga at
+          delectus voluptas laudantium sit.
+        </p>
+      </section>
     </main>
     <footer>&copy; 2023 Funny Ant, LLC</footer>
   </body>
