--- a/home.html
+++ b/home.html
@@ -68,7 +68,8 @@
         background-image: linear-gradient(
             rgba(0, 0, 0, 0.5),
             rgba(0, 0, 0, 0.5)
-          ), url("https://lh3.googleusercontent.com/pw/AIL4fc_HUWrTKy58BJkWlLdURVMunqHINO-gg3PLes4BKByV9BWuiDpCaPL1VFVfbPo4GI0nM-O7cwTW98D8mS1vDatgq8hpJsyOLKpMWwSpLZiM_Xrf2uv5-Xr7P0jWM1ExNkMIfkKLLDsf0ng5nfMkHMyWzhrIF7brpaD14yGZsBTcu1Qbn5MkdLry2tmF_glblzzMd7kvnke7ky2metwIIffoafV-tv-6gRPX1IjgdJDEGI7rRn8ldDVMdRqsGiASvimI2f-TMKgcWKcutxqAKwIAn2_FYfNpS1xDc8nipWzzop9xuPDGFxWgwjNtVHAAuJYZfQt3-8G_pYm63NEQqDcTg-x2-Iut567G85yJ9l2j85OVyQoip2UqrCJqzA7NFL_wy5H7ylI-GAdmqvBjjw8DDXys2EcCRPS_f5gFar9hCgDR39Dprkoq19E9-zP2MDNw9NhPkUPK64JmiKEAH4zQTc4NjQe6lH2fbA-hlj53mWnyJ3hwxRkditIb-9uCqNkfMmQJiS92lN8Kh6l4R6IB-3NNumyeShxZS9KR9bTUCjPgbPAFdjZagISlLNwVXjttU_z0kQh-xu5_rOjpNq9s5P4_nclZtjdGu_nr08N37hIo1pdY3xjntX_riMYBeYgUUV9l0lk8DBfhVhBN4l_zNlktj1dV2nNUdhnM-Xx1mTcoiFIzrxFGy-Mz4nyxH5Z6jQx_olAS6e5CrSGajjKftaU5ahU8iNDJbXpI1uiPcEUHvQGgc1VZcr6JGrsGx5QtnLJYIKiXAJS9TZ2IM5Bx_cqLcvxHWCQspo70Ej9OhJ2P2l01AiOOvThMDRFHiz_PT6_PKub5ioyjr6DI8NDzm0ttoDJVrtMwszDTeS1Sqja1_jOFEXgXYo1jFEJEwMDr2Y8qIsJFgJVtRglxLvQ=w2654-h1990-s-no?authuser=0");
+          ),
+          url("https://lh3.googleusercontent.com/pw/AIL4fc_HUWrTKy58BJkWlLdURVMunqHINO-gg3PLes4BKByV9BWuiDpCaPL1VFVfbPo4GI0nM-O7cwTW98D8mS1vDatgq8hpJsyOLKpMWwSpLZiM_Xrf2uv5-Xr7P0jWM1ExNkMIfkKLLDsf0ng5nfMkHMyWzhrIF7brpaD14yGZsBTcu1Qbn5MkdLry2tmF_glblzzMd7kvnke7ky2metwIIffoafV-tv-6gRPX1IjgdJDEGI7rRn8ldDVMdRqsGiASvimI2f-TMKgcWKcutxqAKwIAn2_FYfNpS1xDc8nipWzzop9xuPDGFxWgwjNtVHAAuJYZfQt3-8G_pYm63NEQqDcTg-x2-Iut567G85yJ9l2j85OVyQoip2UqrCJqzA7NFL_wy5H7ylI-GAdmqvBjjw8DDXys2EcCRPS_f5gFar9hCgDR39Dprkoq19E9-zP2MDNw9NhPkUPK64JmiKEAH4zQTc4NjQe6lH2fbA-hlj53mWnyJ3hwxRkditIb-9uCqNkfMmQJiS92lN8Kh6l4R6IB-3NNumyeShxZS9KR9bTUCjPgbPAFdjZagISlLNwVXjttU_z0kQh-xu5_rOjpNq9s5P4_nclZtjdGu_nr08N37hIo1pdY3xjntX_riMYBeYgUUV9l0lk8DBfhVhBN4l_zNlktj1dV2nNUdhnM-Xx1mTcoiFIzrxFGy-Mz4nyxH5Z6jQx_olAS6e5CrSGajjKftaU5ahU8iNDJbXpI1uiPcEUHvQGgc1VZcr6JGrsGx5QtnLJYIKiXAJS9TZ2IM5Bx_cqLcvxHWCQspo70Ej9OhJ2P2l01AiOOvThMDRFHiz_PT6_PKub5ioyjr6DI8NDzm0ttoDJVrtMwszDTeS1Sqja1_jOFEXgXYo1jFEJEwMDr2Y8qIsJFgJVtRglxLvQ=w2654-h1990-s-no?authuser=0");
         /* Set a specific height */
         height: 50%;
 
@@ -76,7 +77,16 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        /* position: relative; */
+        position: relative;
+      }
+
+      section div.background-image1-text {
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
       }
 
       nav {
@@ -189,7 +199,12 @@
           doloribus, tenetur nostrum?
         </p>
       </section>
-      <section class="background-image1"></section>
+      <section class="background-image1">
+        <div class="background-image1-text">
+          <h1>Fire</h1>
+          <p>Classic Mixtapes</p>
+        </div>
+      </section>
     </main>
     <footer>&copy; 2023 Funny Ant, LLC</footer>
   </body>
