--- a/home.html
+++ b/home.html
@@ -6,9 +6,9 @@
     <title>Home</title>
     <style>
       html,
-      body,
-      main {
+      body {
         height: 100%;
+        width: 100%;
       }
       body {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -16,9 +16,8 @@
           sans-serif;
         margin: 0;
         display: grid;
-        /* grid-template-rows: minmax(10%, 15%); */
         grid-template-rows: auto 1fr auto;
-        grid-template-columns: 1fr;
+        grid-template-columns: 100%;
         grid-template-areas: "header" "main" "footer";
         background-color: #fafafa;
       }
@@ -79,6 +78,8 @@
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
+        display: block;
+        /* grid-area: main; */
         /* z-index: 1; */
       }
 
@@ -182,15 +183,14 @@
             <a href="">Read</a>
           </li>
           <!-- <li>
-            <a href="">Events</a>
-          </li> -->
+              <a href="">Events</a>
+            </li> -->
         </ul>
       </nav>
       <span id="account">
         <!-- <a href="#account">Account</a> -->
       </span>
     </header>
-
     <main>
       <section class="hero">
         <h1>Curated Classic Hip Hop Content</h1>
@@ -212,45 +212,47 @@
           doloribus, tenetur nostrum?
         </p>
       </section>
-      <section>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-          nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
-          natus, obcaecati dolorem iste earum voluptates? At aperiam nam libero
-          doloribus, tenetur nostrum?
-        </p>
-      </section>
-      <section>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-          nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
-          natus, obcaecati dolorem iste earum voluptates? At aperiam nam libero
-          doloribus, tenetur nostrum?
-        </p>
-      </section>
-      <section>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-          nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
-          natus, obcaecati dolorem iste earum voluptates? At aperiam nam libero
-          doloribus, tenetur nostrum?
-        </p>
-      </section>
-      <section>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-          nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
-          natus, obcaecati dolorem iste earum voluptates? At aperiam nam libero
-          doloribus, tenetur nostrum?
-        </p>
-      </section>
-      <!-- <section class="background-image1">
+      <section class="background-image1">
         <div class="background-image1-text">
           <h1>Classic Mixtapes</h1>
           <p>from back in the day</p>
         </div>
-      </section> -->
+      </section>
+      <section>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+          nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
+          natus, obcaecati dolorem iste earum voluptates? At aperiam nam libero
+          doloribus, tenetur nostrum?
+        </p>
+      </section>
+      <section>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+          nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
+          natus, obcaecati dolorem iste earum voluptates? At aperiam nam libero
+          doloribus, tenetur nostrum?
+        </p>
+      </section>
+      <section>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+          nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
+          natus, obcaecati dolorem iste earum voluptates? At aperiam nam libero
+          doloribus, tenetur nostrum?
+        </p>
+      </section>
+      <section>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+          nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
+          natus, obcaecati dolorem iste earum voluptates? At aperiam nam libero
+          doloribus, tenetur nostrum?
+        </p>
+      </section>
+      <footer>
+        <span>&copy; 2023 Funny Ant, LLC</span>
+      </footer>
     </main>
-    <footer>&copy; 2023 Funny Ant, LLC</footer>
   </body>
 </html>
