--- a/home.html
+++ b/home.html
@@ -166,6 +166,11 @@
         padding: 1rem 4rem;
         grid-area: footer;
       }
+
+      .background-graph-paper {
+        background-color: #acbb78;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23f7f8f8' fill-opacity='0.4'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+      }
     </style>
   </head>
   <body>
@@ -203,8 +208,6 @@
           natus, obcaecati dolorem iste earum voluptates? At aperiam nam libero
           doloribus, tenetur nostrum?
         </p>
-      </section>
-      <section>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
           nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
@@ -226,7 +229,7 @@
           doloribus, tenetur nostrum?
         </p>
       </section>
-      <section>
+      <section class="background-graph-paper">
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
           nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
@@ -234,14 +237,7 @@
           doloribus, tenetur nostrum?
         </p>
       </section>
-      <section>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-          nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
-          natus, obcaecati dolorem iste earum voluptates? At aperiam nam libero
-          doloribus, tenetur nostrum?
-        </p>
-      </section>
+
       <section>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
@@ -251,7 +247,7 @@
         </p>
       </section>
       <footer>
-        <span>&copy; 2023 Funny Ant, LLC</span>
+        <!-- <span>&copy; 2023 Funny Ant, LLC</span> -->
       </footer>
     </main>
   </body>
