--- a/home.html
+++ b/home.html
@@ -99,9 +99,12 @@
         background-color: #a16e31;
         color: white;
 
+        background-color: hsl(45, 3%, 35%);
+        color: white;
+
         /* text-transform: uppercase; */
         width: 16rem;
-        /* opacity: 94%; */
+        opacity: 90%;
         padding: 3em;
       }
 
