--- a/home.html
+++ b/home.html
@@ -4,204 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <style>
-      html,
-      body {
-        height: 100%;
-        width: 100%;
-      }
-      body {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-          sans-serif;
-        color: hsl(45, 3%, 24%);
-        margin: 0;
-        display: grid;
-        grid-template-rows: auto 1fr auto;
-        grid-template-columns: 100%;
-        grid-template-areas: "header" "main" "footer";
-        background-color: #fafafa;
-      }
-      header {
-        display: flex;
-        padding: 2em 4em;
-        background-color: white;
-        grid-area: header;
-      }
-
-      main {
-        grid-area: main;
-      }
-
-      section {
-        padding: 2em 4em;
-      }
-
-      section.hero {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-areas: "col-one col-two";
-        gap: 3em;
-        padding: 6em 25em;
-        background: #f7f8f8; /* fallback for old browsers */
-        background: -webkit-linear-gradient(
-          to right,
-          #fb923c,
-          #f7f8f8
-        ); /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(
-          to right,
-          #fb923c,
-          #f7f8f8
-        ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-      }
-
-      section.hero h1 {
-        grid-area: col-one;
-        justify-self: end;
-      }
-
-      section.hero h5 {
-        grid-area: col-two;
-        /* justify-self: end; */
-      }
-
-      .background-mixtapes {
-        background-image: linear-gradient(
-            hsla(0, 0%, 0%, 0.1),
-            rgba(0, 0, 0, 0.1)
-          ),
-          url("images/mixtapes.jpg");
-        /* Set a specific height */
-        height: 35%;
-        /* Position and center the image to scale nicely on all screens */
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        position: relative;
-        display: block;
-      }
-
-      .background-mixtapes-text {
-        text-align: center;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-
-        background-color: #e4873e;
-        color: hsl(45, 3%, 24%);
-
-        background-color: #e3b502;
-        color: #ededed;
-
-        background-color: #a16e31;
-        color: white;
-
-        background-color: hsl(45, 3%, 35%);
-        color: white;
-
-        /* text-transform: uppercase; */
-        width: 12rem;
-        opacity: 90%;
-        padding: 4em;
-      }
-
-      nav {
-        flex: 5;
-      }
-
-      nav > ul {
-        list-style-type: none;
-        margin: 0;
-        display: flex;
-        gap: 1.8rem;
-        justify-content: center;
-      }
-
-      nav > ul > li > a,
-      #account > a {
-        text-decoration: none;
-        color: #3f3e3b;
-        font-weight: 650;
-      }
-
-      nav > ul > li > a:hover,
-      #account > a:hover {
-        text-decoration: underline;
-        color: hsl(45, 3%, 24%);
-        font-weight: 650;
-      }
-
-      #logo {
-        flex: 1;
-        max-width: 8rem;
-        max-height: 3.5rem;
-      }
-
-      #logo:after {
-        background: #fb923c;
-        content: "";
-        display: block;
-        height: 5px;
-        margin: 10px auto 0;
-        width: 8rem;
-      }
-
-      #account {
-        flex: 1;
-      }
-
-      #account {
-        display: flex;
-        justify-content: flex-end;
-      }
-
-      p {
-        width: 60ch;
-        line-height: 1.5rem;
-      }
-
-      #logo a {
-        font-size: x-large;
-        text-decoration: none;
-        font-weight: 800;
-        letter-spacing: 0.1rem;
-        color: hsl(45, 3%, 24%);
-        font-family: monospace;
-      }
-
-      #logo a:hover {
-        text-decoration: underline;
-      }
-
-      footer {
-        height: 20rem;
-        background-color: #ededed;
-        padding: 1rem 4rem;
-        grid-area: footer;
-      }
-
-      .background-graph-paper {
-        height: 25%;
-        background-color: #ffffff;
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%2394a3b8' fill-opacity='0.4'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-      }
-
-      .background-used-record-store {
-        background-image: linear-gradient(
-            hsla(0, 0%, 0%, 0.1),
-            rgba(0, 0, 0, 0.1)
-          ),
-          url("images/used-record-store1.jpg");
-        height: 50%;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        position: relative;
-        display: block;
-      }
-    </style>
+    <link rel="stylesheet" href="css/home.css" />
   </head>
   <body>
     <header>
@@ -229,8 +32,9 @@
     <main>
       <section class="background-mixtapes">
         <div class="background-mixtapes-text">
-          <h2>Curated Classic Hip Hop Content</h2>
-          <h5>Curated content from around the internet. No news.</h5>
+          <h3>Classic Hip Hop Content</h3>
+          <em>curated</em>
+          <!-- <h5>Curated content from around the internet. No news.</h5> -->
         </div>
       </section>
 
@@ -264,7 +68,7 @@
         <h5>Curated content from around the internet. No news.</h5>
       </section>
 
-      <section class="background-used-record-store">test</section>
+      <section class="background-used-record-store"></section>
 
       <section>
         <p>
