--- a/home.html
+++ b/home.html
@@ -37,21 +37,6 @@
           <!-- <h5>Curated content from around the internet. No news.</h5> -->
         </div>
       </section>
-
-      <section>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-          nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
-          natus, obcaecati dolorem iste earum voluptates? At aperiam nam libero
-          doloribus, tenetur nostrum?
-        </p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-          nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
-          natus, obcaecati dolorem iste earum voluptates? At aperiam nam libero
-          doloribus, tenetur nostrum?
-        </p>
-      </section>
       <section
         class="background-graph-paper"
         style="display: flex; justify-content: flex-end"
@@ -66,6 +51,31 @@
       <section class="hero">
         <h1>Curated Classic Hip Hop Content</h1>
         <h5>Curated content from around the internet. No news.</h5>
+      </section>
+      <section class="text-image">
+        <article>
+          <h4>Old School Rules</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+            nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
+            natus, obcaecati dolorem iste earum voluptates? At aperiam nam
+            libero doloribus, tenetur nostrum?
+          </p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+            nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
+            natus, obcaecati dolorem iste earum voluptates? At aperiam nam
+            libero doloribus, tenetur nostrum?
+          </p>
+        </article>
+
+        <img
+          id="ultra-image"
+          src="images/ultramagnetic-mcs-jacket.jpg"
+          alt="Ultramagnetic MCs Jacket"
+          height="400"
+          width="300"
+        />
       </section>
 
       <section class="background-used-record-store"></section>
