--- a/home.html
+++ b/home.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <header>
-      <span id="logo"><a href="/">Turn Up Hip Hop</a></span>
+      <span id="logo">
+        <a href="/">Turn Up Hip Hop </a>
+       
+      </span>
+      
       <nav>
         <ul>
           <li>
