--- a/home.html
+++ b/home.html
@@ -36,8 +36,8 @@
     <main>
       <section class="background-mixtapes">
         <div class="background-mixtapes-text">
-          <h3>Classic Hip Hop Content</h3>
-          <em>curated</em>
+          <h3>Classic Hip Hop Curated Content</h3>
+          <!-- <em>curated</em> -->
           <!-- <h5>Curated content from around the internet. No news.</h5> -->
         </div>
       </section>
