--- a/home.html
+++ b/home.html
@@ -10,9 +10,8 @@
     <header>
       <span id="logo">
         <a href="/">Turn Up Hip Hop </a>
-       
       </span>
-      
+
       <nav>
         <ul>
           <li>
@@ -43,14 +42,41 @@
       </section>
       <section
         class="background-graph-paper"
-        style="display: flex; justify-content: flex-end"
+        style="display: flex; justify-content: space-around; "
       >
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-          nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
-          natus, obcaecati dolorem iste earum voluptates? At aperiam nam libero
-          doloribus, tenetur nostrum?
-        </p>
+        <img
+          height="448"
+          width="336"
+          id="master-ace-bizmarkie-puppet"
+          src="/images/master-ace-bizmarkie-puppet.jpg"
+          alt=""
+        />
+        <article>
+          <h4>Old School Rules</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+            nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
+            natus, obcaecati dolorem iste earum voluptates? At aperiam nam
+            libero doloribus, tenetur nostrum?
+          </p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+            nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
+            natus, obcaecati dolorem iste earum voluptates? At aperiam nam
+            libero doloribus, tenetur nostrum?
+          </p>
+          <!-- <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+            nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
+            natus, obcaecati dolorem iste earum voluptates? At aperiam nam
+            libero doloribus, tenetur nostrum?
+          </p> -->
+        </article>
+        <!-- <ul>
+          <li>DJ JUICE</li>
+          <li>DJ CLUE</li>
+          <li>DOO WOP</li>
+        </ul> -->
       </section>
       <section class="hero">
         <h1>Curated Classic Hip Hop Content</h1>
@@ -82,7 +108,7 @@
         />
       </section>
 
-      <section class="background-used-record-store"></section>
+      <!-- <section class="background-used-record-store"></section>
 
       <section>
         <p>
@@ -91,7 +117,7 @@
           natus, obcaecati dolorem iste earum voluptates? At aperiam nam libero
           doloribus, tenetur nostrum?
         </p>
-      </section>
+      </section> -->
       <footer>
         <span>&copy; 2023 Funny Ant, LLC</span>
       </footer>
