cleanup: remove commented code

--- a/home.html
+++ b/home.html
@@ -11,7 +11,6 @@
       <span id="logo">
         <a href="/">Turn Up Hip Hop </a>
       </span>
-
       <nav>
         <ul>
           <li>
@@ -23,9 +22,6 @@
           <li>
             <a href="">Read</a>
           </li>
-          <!-- <li>
-              <a href="">Events</a>
-            </li> -->
         </ul>
       </nav>
       <span id="account">
@@ -36,13 +32,11 @@
       <section class="background-mixtapes">
         <div class="background-mixtapes-text">
           <h3>Classic Hip Hop Curated Content</h3>
-          <!-- <em>curated</em> -->
-          <!-- <h5>Curated content from around the internet. No news.</h5> -->
         </div>
       </section>
       <section
         class="background-graph-paper"
-        style="display: flex; justify-content: space-around; "
+        style="display: flex; justify-content: space-around"
       >
         <img
           height="448"
@@ -66,11 +60,12 @@
             libero doloribus, tenetur nostrum?
           </p>
         </article>
-  
       </section>
-      <section class="hero">
-        <h1>Curated Classic Hip Hop Content</h1>
-        <h5>Curated content from around the internet. No news.</h5>
+      <section class="gradient-accent">
+        <div>
+          <h1>Curated Classic Hip Hop Content</h1>
+          <h5>Curated content from around the internet. No news.</h5>
+        </div>
       </section>
       <section class="text-image">
         <article>
@@ -97,17 +92,6 @@
           width="300"
         />
       </section>
-
-      <!-- <section class="background-used-record-store"></section>
-
-      <section>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
-          nobis vitae beatae ipsum repudiandae voluptatem minus, eligendi,
-          natus, obcaecati dolorem iste earum voluptates? At aperiam nam libero
-          doloribus, tenetur nostrum?
-        </p>
-      </section> -->
       <footer>
         <span>&copy; 2023 Funny Ant, LLC</span>
       </footer>
