add alt text to image

--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
           width="336"
           id="master-ace-bizmarkie-puppet"
           src="/images/master-ace-bizmarkie-puppet.jpg"
-          alt=""
+          alt="Master Ace with Bizmarkie Puppet"
         />
         <article>
           <h4>Old School Rules</h4>
@@ -83,7 +83,6 @@
             libero doloribus, tenetur nostrum?
           </p>
         </article>
-
         <img
           id="ultra-image"
           src="images/ultramagnetic-mcs-jacket.jpg"
