--- a/home.html
+++ b/home.html
@@ -14,10 +14,10 @@
       <nav>
         <ul>
           <li>
-            <a href="">Watch</a>
+            <a  href="">Watch</a>
           </li>
           <li>
-            <a href="">Listen</a>
+            <a class="active" href="">Listen</a>
           </li>
           <li>
             <a href="">Read</a>
