adjust footer color and text

--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
       <section class="gradient-accent">
         <div>
           <h1>Curated Classic Hip Hop Content</h1>
-          <h5>Curated content from around the internet. No news.</h5>
+          <p>Curated content from around the internet. No news.</p>
         </div>
       </section>
       <section class="text-image">
