update mixtape image

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
       <span id="logo">
         <a href="/">Turn Up Hip Hop </a>
       </span>
-      <nav>
+      <!-- <nav>
         <ul>
           <li>
             <a href="">Watch</a>
@@ -23,7 +23,7 @@
             <a href="">Read</a>
           </li>
         </ul>
-      </nav>
+      </nav> -->
       <span id="account">
         <!-- <a href="#account">Account</a> -->
       </span>
@@ -36,11 +36,11 @@
       </section>
       <section
         class="background-graph-paper"
-        style="display: flex; justify-content: space-around"
+        style="display: flex; justify-content: space-around; flex-wrap: wrap;"
       >
         <img
-          height="448"
-          width="336"
+          height="300px"
+          width="400px"
           id="master-ace-bizmarkie-puppet"
           src="/images/master-ace-bizmarkie-puppet.jpg"
           alt="Master Ace with Bizmarkie Puppet"
@@ -63,7 +63,7 @@
       </section>
       <section class="gradient-accent">
         <div>
-          <h1>Curated Classic Hip Hop Content</h1>
+          <h2>Curated Classic Hip Hop Content</h2>
           <p>Curated content from around the internet. No news.</p>
         </div>
       </section>
@@ -87,8 +87,8 @@
           id="ultra-image"
           src="images/ultramagnetic-mcs-jacket.jpg"
           alt="Ultramagnetic MCs Jacket"
-          height="400"
-          width="300"
+          height="400px"
+          width="300px"
         />
       </section>
       <footer>
