hide nav on sm sizes

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
       <span id="logo">
         <a href="/">Turn Up Hip Hop </a>
       </span>
-      <!-- <nav>
+      <nav>
         <ul>
           <li>
             <a href="">Watch</a>
@@ -23,7 +23,7 @@
             <a href="">Read</a>
           </li>
         </ul>
-      </nav> -->
+      </nav>
       <span id="account">
         <!-- <a href="#account">Account</a> -->
       </span>
@@ -36,7 +36,7 @@
       </section>
       <section
         class="background-graph-paper"
-        style="display: flex; justify-content: space-around; flex-wrap: wrap;"
+        style="display: flex; justify-content: space-around; flex-wrap: wrap"
       >
         <img
           height="300px"
