--- a/home.html
+++ b/home.html
@@ -34,10 +34,7 @@
           <h3>Classic Hip Hop Curated Content</h3>
         </div>
       </section>
-      <section
-        class="background-graph-paper"
-        style="display: flex; justify-content: space-around; flex-wrap: wrap"
-      >
+      <section class="background-graph-paper split">
         <img
           height="300px"
           width="400px"
@@ -62,12 +59,12 @@
         </article>
       </section>
       <section class="gradient-accent">
-        <div>
+        <div class="text-center">
           <h2>Curated Classic Hip Hop Content</h2>
-          <p>Curated content from around the internet. No news.</p>
+          <div>Curated content from around the internet. No news.</div>
         </div>
       </section>
-      <section class="text-image">
+      <section class="text-image split">
         <article>
           <h4>Old School Rules</h4>
           <p>
