--- a/news.html
+++ b/news.html
@@ -9,88 +9,120 @@
     <!-- art*12>figure>img+h2>lorem6 -->
   </head>
   <body>
+    <header class="bg-light">
+      <span
+        ><svg
+          id="logo-35"
+          width="50"
+          height="39"
+          viewBox="0 0 50 39"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M16.4992 2H37.5808L22.0816 24.9729H1L16.4992 2Z"
+            class="ccompli1"
+            fill="#007AFF"
+          ></path>
+          <path
+            d="M17.4224 27.102L11.4192 36H33.5008L49 13.0271H32.7024L23.2064 27.102H17.4224Z"
+            class="ccustom"
+            fill="#312ECB"
+          ></path></svg
+      ></span>
+    </header>
     <main class="bg-neutral">
-      <div class="container ">
-        <h1>Latest News</h1>
+      <div class="container">
+        <h1>Hip Hop Thoughts</h1>
         <section class="feed bg-light">
           <div class="container">
-            <article>
+            <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
+              </figure>
+              <div>
                 <h2>Lorem ipsum dolor sit amet consectetur</h2>
-                <!-- <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Praesentium eum iure dolor, laboriosam ab delectus vitae non,
-            aperiam quod iusto autem ipsa corrupti atque velit doloremque harum
-            consequuntur nulla facilis?
-          </p> -->
-              </figure>
+                <div class="read-time">3 min read</div>
+              </div>
             </article>
-            <article>
+            <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
+              </figure>
+              <div>
                 <h2>Doloremque consequuntur mollitia atque doloribus iure!</h2>
-              </figure>
+                <div class="read-time">4 min read</div>
+              </div>
             </article>
-            <article>
+            <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
-                <h2>Sunt optio corporis suscipit maxime inventore!</h2>
               </figure>
+              <h2>Sunt optio corporis suscipit maxime inventore!</h2>
+              <div class="read-time">2 min read</div>
             </article>
-            <article>
+            <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
-                <h2>Adipisci, accusamus tempore. Quaerat, recusandae porro?</h2>
               </figure>
+              <h2>Adipisci, accusamus tempore. Quaerat, recusandae porro?</h2>
+              <div class="read-time">7 min read</div>
             </article>
-            <article>
+            <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
-                <h2>Omnis adipisci fugit nobis quia nulla?</h2>
               </figure>
+              <h2>Omnis adipisci fugit nobis quia nulla?</h2>
+              <div class="read-time">3 min read</div>
             </article>
-            <article>
+            <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
-                <h2>Odio non hic ex corrupti. Quidem</h2>
               </figure>
+              <h2>Odio non hic ex corrupti. Quidem</h2>
+              <div class="read-time">3 min read</div>
             </article>
-            <article>
+            <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
-                <h2>Voluptatum animi facilis rerum dicta corrupti?</h2>
               </figure>
+              <h2>Voluptatum animi facilis rerum dicta corrupti?</h2>
+              <div class="read-time">3 min read</div>
             </article>
-            <article>
+            <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
-                <h2>Quos quas voluptas deserunt possimus dolores</h2>
               </figure>
+              <h2>Quos quas voluptas deserunt possimus dolores</h2>
+              <div class="read-time">3 min read</div>
             </article>
-            <article>
+            <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
-                <h2>Nesciunt eveniet eligendi pariatur maxime facilis</h2>
               </figure>
+              <h2>Nesciunt eveniet eligendi pariatur maxime facilis</h2>
+              <div class="read-time">3 min read</div>
             </article>
-            <article>
+            <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
-                <h2>Deserunt aperiam culpa vel nisi minima!</h2>
               </figure>
+              <h2>Deserunt aperiam culpa vel nisi minima!</h2>
+              <div class="read-time">3 min read</div>
             </article>
-            <article>
+            <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
-                <h2>Iste ex voluptas a iure cum</h2>
               </figure>
+              <h2>Iste ex voluptas a iure cum</h2>
+              <div class="read-time">3 min read</div>
             </article>
-            <article>
+            <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
-                <h2>Tempore rem explicabo dolores animi facere</h2>
               </figure>
+              <h2>Tempore rem explicabo dolores animi facere</h2>
+              <div class="read-time">3 min read</div>
             </article>
           </div>
         </section>
