feed working desktop

--- a/news.html
+++ b/news.html
@@ -58,71 +58,91 @@
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
               </figure>
-              <h2>Sunt optio corporis suscipit maxime inventore!</h2>
-              <div class="read-time">2 min read</div>
+              <div>
+                <h2>Sunt optio corporis suscipit maxime inventore!</h2>
+                <div class="read-time">2 min read</div>
+              </div>
             </article>
             <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
               </figure>
-              <h2>Adipisci, accusamus tempore. Quaerat, recusandae porro?</h2>
-              <div class="read-time">7 min read</div>
+              <div>
+                <h2>Adipisci, accusamus tempore. Quaerat, recusandae porro?</h2>
+                <div class="read-time">7 min read</div>
+              </div>
             </article>
             <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
               </figure>
-              <h2>Omnis adipisci fugit nobis quia nulla?</h2>
-              <div class="read-time">3 min read</div>
+              <div>
+                <h2>Omnis adipisci fugit nobis quia nulla?</h2>
+                <div class="read-time">3 min read</div>
+              </div>
             </article>
             <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
               </figure>
-              <h2>Odio non hic ex corrupti. Quidem</h2>
-              <div class="read-time">3 min read</div>
+              <div>
+                <h2>Odio non hic ex corrupti. Quidem</h2>
+                <div class="read-time">3 min read</div>
+              </div>
             </article>
             <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
               </figure>
-              <h2>Voluptatum animi facilis rerum dicta corrupti?</h2>
-              <div class="read-time">3 min read</div>
+              <div>
+                <h2>Voluptatum animi facilis rerum dicta corrupti?</h2>
+                <div class="read-time">3 min read</div>
+              </div>
             </article>
             <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
               </figure>
-              <h2>Quos quas voluptas deserunt possimus dolores</h2>
-              <div class="read-time">3 min read</div>
+              <div>
+                <h2>Quos quas voluptas deserunt possimus dolores</h2>
+                <div class="read-time">3 min read</div>
+              </div>
             </article>
             <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
               </figure>
-              <h2>Nesciunt eveniet eligendi pariatur maxime facilis</h2>
-              <div class="read-time">3 min read</div>
+              <div>
+                <h2>Nesciunt eveniet eligendi pariatur maxime facilis</h2>
+                <div class="read-time">3 min read</div>
+              </div>
             </article>
             <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
               </figure>
-              <h2>Deserunt aperiam culpa vel nisi minima!</h2>
-              <div class="read-time">3 min read</div>
+              <div>
+                <h2>Deserunt aperiam culpa vel nisi minima!</h2>
+                <div class="read-time">3 min read</div>
+              </div>
             </article>
             <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
               </figure>
-              <h2>Iste ex voluptas a iure cum</h2>
-              <div class="read-time">3 min read</div>
+              <div>
+                <h2>Iste ex voluptas a iure cum</h2>
+                <div class="read-time">3 min read</div>
+              </div>
             </article>
             <article class="split">
               <figure>
                 <img src="https://placehold.co/200x200.png" alt="" />
               </figure>
-              <h2>Tempore rem explicabo dolores animi facere</h2>
-              <div class="read-time">3 min read</div>
+              <div>
+                <h2>Tempore rem explicabo dolores animi facere</h2>
+                <div class="read-time">3 min read</div>
+              </div>
             </article>
           </div>
         </section>
